--- a/src/components/StopPanel.css
+++ b/src/components/StopPanel.css
@@ -153,7 +153,7 @@
 
 .btn-primary {
   background-color: var(--mr-red);
-  color: var(--mr-white);
+  color: #fff;
 }
 
 .btn-primary:hover:not(:disabled) {
@@ -168,7 +168,7 @@
 
 .btn-optimize {
   background-color: var(--mr-green);
-  color: var(--mr-white);
+  color: #fff;
 }
 
 .btn-optimize:hover:not(:disabled) {
@@ -184,7 +184,7 @@
 
 .btn-toggle.active {
   background-color: var(--mr-dark);
-  color: var(--mr-white);
+  color: var(--mr-gray-100);
 }
 
 .btn-toggle:hover:not(:disabled) {
@@ -299,7 +299,7 @@
   width: 2rem;
   height: 2rem;
   background-color: var(--mr-red);
-  color: var(--mr-white);
+  color: #fff;
   border-radius: 50%;
   display: flex;
   align-items: center;
